added k-Nearest-Neighbor Collaborative Filtering Recommender

--- a/Demos.ipynb
+++ b/Demos.ipynb
@@ -10,7 +10,9 @@
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python2.7/dist-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/usr/local/lib/python2.7/dist-packages/fuzzywuzzy/fuzz.py:35: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
      ]
     }
    ],
@@ -19,11 +21,9 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from sklearn.cross_validation import train_test_split\n",
-    "import CF_Item_Item as Recommender_CF_II\n",
+    "import Recommender.CF_Item_Item as Recommender_CF_II\n",
     "# import CF_User_Item as Recommender_CF_UI \n",
-    "# import CF_kNN as Recommender_CF_kNN\n",
-    "\n",
-    "import Recommender_Try as Recommenders"
+    "import Recommender.CF_kNN as Recommender_CF_kNN"
    ]
   },
   {
@@ -129,6 +129,22 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# print(len(train_data))\n",
+    "# train_data_agg_count = train_data.groupby(['song']).agg({'listen_count': 'count'}).reset_index()\n",
+    "# train_data_agg_sum = train_data.groupby(['song','user_id']).agg({'listen_count': 'sum'}).reset_index()\n",
+    "# print(len(train_data_agg_count))\n",
+    "# print(len(train_data_agg_sum))\n",
+    "# print(len(train_data['song'].unique()))\n",
+    "# print(train_data_agg_count.head())\n",
+    "# print(train_data_agg_sum.head())\n",
+    "# print(train_data[train_data['song'] == '& Down - Boys Noize'])\n",
+    "# print(train_data_agg_sum.pivot(index='song', columns='user_id', values='listen_count'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Item - Item Collaborative Filtering using Coocurence Matrix\n",
+    "#### Item - Item Collaborative Filtering using Cooccurence Matrix\n",
     "\n",
     "This method is achieved by constructing coocurence matrix of the (user_songs X all_songs). In this example, the recommendations are the songs that are outside of his listening list (songs that he has already listened to)."
    ]
@@ -174,7 +190,7 @@
       "Recommendation process going on:\n",
       "----------------------------------------------------------------------\n",
       "No. of unique items (songs) for the user: 13\n",
-      "no. of unique items (songs) in the training set: 5151\n",
+      "No. of unique items (songs) in the training set: 5151\n",
       "Non zero values in cooccurence_matrix :2813\n"
      ]
     },
@@ -332,11 +348,338 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Collaborative Filtering using k-NearestNeighbors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training...\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Recommendation with random song as a reference\n",
+      "Recommendation process going on:\n",
+      "----------------------------------------------------------------------\n",
+      "Recommendations for For You - Coldplay:\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>song</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Parks - Four Tet</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>I Feel For You - Stefan Schrom</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Comet Course - Flying Lotus</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Playboy - Hot Chip</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Plastic People - Four Tet</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Church - T-Pain featuring Teddy Verseti</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Phantom - Justice</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Paul's Birthday - Caribou (formerly Dan Snaith...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Puppetmad - Puppetmastaz</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>This Unfolds - Four Tet</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    user_id  \\\n",
+       "0  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "1  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "2  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "3  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "4  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "5  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "6  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "7  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "8  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "9  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "\n",
+       "                                                song  distance rank  \n",
+       "0                                   Parks - Four Tet       0.0    1  \n",
+       "1                     I Feel For You - Stefan Schrom       0.0    2  \n",
+       "2                        Comet Course - Flying Lotus       0.0    3  \n",
+       "3                                 Playboy - Hot Chip       0.0    4  \n",
+       "4                          Plastic People - Four Tet       0.0    5  \n",
+       "5            Church - T-Pain featuring Teddy Verseti       0.0    6  \n",
+       "6                                  Phantom - Justice       0.0    7  \n",
+       "7  Paul's Birthday - Caribou (formerly Dan Snaith...       0.0    8  \n",
+       "8                           Puppetmad - Puppetmastaz       0.0    9  \n",
+       "9                            This Unfolds - Four Tet       0.0   10  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Recommender2 = Recommender_CF_kNN.CF_kNN()\n",
+    "Recommender2.create(data_df, 'user_id', 'song', 'listen_count')\n",
+    "\n",
+    "print(\"\\n----------------------------------------------------------------------\")\n",
+    "print(\"Recommendation with random song as a reference\")\n",
+    "print(\"Recommendation process going on:\")\n",
+    "print(\"----------------------------------------------------------------------\")\n",
+    "\n",
+    "Recommender2.recommend(user_id, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Recommendation with query song as a reference\n",
+      "Recommendation process going on:\n",
+      "----------------------------------------------------------------------\n",
+      "fuzzy ratio query results:\n",
+      "[('One Time - Justin Bieber', 75, 3161), ('Somebody To Love - Justin Bieber', 100, 3868), ('Somebody To Love - Queen', 79, 3869)]\n",
+      "\n",
+      "Recommendations for Somebody To Love - Justin Bieber:\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>song</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>U Smile - Justin Bieber</td>\n",
+       "      <td>0.364605</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Teach Me How To Dougie - California Swag District</td>\n",
+       "      <td>0.487478</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Girls Just Wanna Have Fun - Miley Cyrus</td>\n",
+       "      <td>0.527134</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Be Somebody - Kings Of Leon</td>\n",
+       "      <td>0.527134</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>My Dad's Gone Crazy - Eminem / Hailie Jade</td>\n",
+       "      <td>0.533568</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Push It - Salt-N-Pepa</td>\n",
+       "      <td>0.541086</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Dream On - Aerosmith</td>\n",
+       "      <td>0.551400</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Without Me - Eminem</td>\n",
+       "      <td>0.564752</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>All The Right Moves - OneRepublic</td>\n",
+       "      <td>0.565315</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4bd88bfb25263a75bbdd467e74018f4ae570e5df</td>\n",
+       "      <td>Time To Pretend - MGMT</td>\n",
+       "      <td>0.565645</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    user_id  \\\n",
+       "0  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "1  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "2  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "3  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "4  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "5  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "6  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "7  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "8  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "9  4bd88bfb25263a75bbdd467e74018f4ae570e5df   \n",
+       "\n",
+       "                                                song  distance rank  \n",
+       "0                            U Smile - Justin Bieber  0.364605    1  \n",
+       "1  Teach Me How To Dougie - California Swag District  0.487478    2  \n",
+       "2            Girls Just Wanna Have Fun - Miley Cyrus  0.527134    3  \n",
+       "3                        Be Somebody - Kings Of Leon  0.527134    4  \n",
+       "4         My Dad's Gone Crazy - Eminem / Hailie Jade  0.533568    5  \n",
+       "5                              Push It - Salt-N-Pepa  0.541086    6  \n",
+       "6                               Dream On - Aerosmith  0.551400    7  \n",
+       "7                                Without Me - Eminem  0.564752    8  \n",
+       "8                  All The Right Moves - OneRepublic  0.565315    9  \n",
+       "9                             Time To Pretend - MGMT  0.565645   10  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"\\n----------------------------------------------------------------------\")\n",
+    "print(\"Recommendation with query song as a reference\")\n",
+    "print(\"Recommendation process going on:\")\n",
+    "print(\"----------------------------------------------------------------------\")\n",
+    "\n",
+    "Recommender2.recommend(user_id, 10, item='Somebody To Love - Justin Bieber')"
+   ]
   }
  ],
  "metadata": {
