content based recommender finished

--- a/DeepContent.ipynb
+++ b/DeepContent.ipynb
@@ -55,8 +55,8 @@
    "outputs": [],
    "source": [
     "label_map_path = 'dataset/deep_learning/label_map(boolean_mood).csv'\n",
-    "main_song_label_path = './dataset/main_song_labels.csv'\n",
-    "main_labels_path = './dataset/main_labels.csv'\n",
+    "main_song_label_path = 'dataset/main_song_labels.csv'\n",
+    "main_labels_path = 'dataset/main_labels.csv'\n",
     "user_rating_path = 'dataset/main_user_rating.csv'"
    ]
   },
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparing Tag Vector Lengths"
+    "## Preparing Label Vector Lengths"
    ]
   },
   {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1225,16 +1225,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ali</td>\n",
-       "      <td>TRAAAAW128F429D538</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ali</td>\n",
        "      <td>TRAAABD128F429CF47</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1242,23 +1242,24 @@
       ],
       "text/plain": [
        "  username            track_id  rating\n",
-       "0      ali  TRAAAAW128F429D538     4.0\n",
-       "1      ali  TRAAABD128F429CF47     4.5"
+       "1      ali  TRAAABD128F429CF47       1\n",
+       "2      ali  TRAAAAW128F429D538       1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rating_df = pandas.read_csv(user_rating_path, sep='\\t')\n",
+    "rating_df = rating_df[rating_df['rating']!=0]\n",
     "rating_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1340,7 @@
        "4                anger    0.221489  ali"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,12 +1367,473 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Calculating cosine similarity for each song-user-pair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "song:  300 out of:  2703 with user:  1 out of:  1\n",
+      "song:  600 out of:  2703 with user:  1 out of:  1\n",
+      "song:  900 out of:  2703 with user:  1 out of:  1\n",
+      "song:  1200 out of:  2703 with user:  1 out of:  1\n",
+      "song:  1500 out of:  2703 with user:  1 out of:  1\n",
+      "song:  1800 out of:  2703 with user:  1 out of:  1\n",
+      "song:  2100 out of:  2703 with user:  1 out of:  1\n",
+      "song:  2400 out of:  2703 with user:  1 out of:  1\n",
+      "song:  2700 out of:  2703 with user:  1 out of:  1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAEFOU128F932105B</td>\n",
+       "      <td>0.002854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRALIZA128F4233586</td>\n",
+       "      <td>0.002854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRANQLL128F92F5263</td>\n",
+       "      <td>0.002854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRBEFFA128F930F017</td>\n",
+       "      <td>0.002854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAESWB128F149CB2C</td>\n",
+       "      <td>0.003287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAHMIV128F14693DC</td>\n",
+       "      <td>0.003287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAOPTT128F145837E</td>\n",
+       "      <td>0.003287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAYWLI128F9300223</td>\n",
+       "      <td>0.003287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRBBYDT128F14805B4</td>\n",
+       "      <td>0.003287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRBGCLK128F4237A50</td>\n",
+       "      <td>0.003287</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  user            track_id     score\n",
+       "0  ali  TRAEFOU128F932105B  0.002854\n",
+       "1  ali  TRALIZA128F4233586  0.002854\n",
+       "2  ali  TRANQLL128F92F5263  0.002854\n",
+       "3  ali  TRBEFFA128F930F017  0.002854\n",
+       "4  ali  TRAESWB128F149CB2C  0.003287\n",
+       "5  ali  TRAHMIV128F14693DC  0.003287\n",
+       "6  ali  TRAOPTT128F145837E  0.003287\n",
+       "7  ali  TRAYWLI128F9300223  0.003287\n",
+       "8  ali  TRBBYDT128F14805B4  0.003287\n",
+       "9  ali  TRBGCLK128F4237A50  0.003287"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distinct_users=np.unique(rating_df['username'])\n",
+    "label_merge_all=pandas.DataFrame()\n",
+    "\n",
+    "i=1\n",
+    "for user in distinct_users:\n",
+    "    \n",
+    "    # analizing user data one by one\n",
+    "    user_profile_all= user_profile[user_profile['user']==user]\n",
+    "    distinct_songs = np.unique(TF['track_id'])\n",
+    "    j=1\n",
+    "    for song in distinct_songs:\n",
+    "\n",
+    "        if j%300==0:\n",
+    "            print 'song: ', j , 'out of: ', len(distinct_songs) , 'with user: ', i , 'out of: ', len(distinct_users)\n",
+    "\n",
+    "        # analizing song one by one\n",
+    "        TF_song= TF[TF['track_id']==song]\n",
+    "        label_merge = pandas.merge(TF_song,user_profile_all,on = 'label', how = 'left', sort = False)\n",
+    "        label_merge['label_pref']=label_merge['label_pref'].fillna(0)\n",
+    "        \n",
+    "        # listing label_value= weight of the label * label profile of the user\n",
+    "        label_merge['label_value']=label_merge['label_wt']*label_merge['label_pref']\n",
+    "\n",
+    "        # getting the label weight of the current user-song pair\n",
+    "        label_wt_val=np.sqrt(np.sum(np.square(label_merge['label_wt']), axis=0))\n",
+    "        \n",
+    "        # getting the label value of the current user-song pair\n",
+    "        label_pref_val=np.sqrt(np.sum(np.square(user_profile_all['label_pref']), axis=0))\n",
+    "\n",
+    "        # summing the label_value (rating) of user-song pair\n",
+    "        label_merge_final = label_merge.groupby(['user','track_id']).agg({'label_value': 'sum'}).rename(columns = {'label_value': 'score'}).reset_index()\n",
+    "\n",
+    "        # score = score / (label weight * label value)\n",
+    "        label_merge_final['score']=label_merge_final['score']/(label_wt_val*label_pref_val)\n",
+    "\n",
+    "        label_merge_all = label_merge_all.append(label_merge_final, ignore_index=True)\n",
+    "        j=j+1\n",
+    "    i=i+1\n",
+    "    label_merge_all=label_merge_all.sort_values(by=['user','score']).reset_index(drop=True)\n",
+    "    \n",
+    "label_merge_all.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2690</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAQVDI128F42969C8</td>\n",
+       "      <td>0.804297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2689</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAPLET128F145B049</td>\n",
+       "      <td>0.770580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2688</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAXXVN128E0791AE4</td>\n",
+       "      <td>0.744361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2679</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRALVCW128F4288926</td>\n",
+       "      <td>0.736058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2670</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>0.736058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2671</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAAABD128F429CF47</td>\n",
+       "      <td>0.736058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2672</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAAZBD128F427A97D</td>\n",
+       "      <td>0.736058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2673</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRACHHH128E0788A35</td>\n",
+       "      <td>0.736058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2674</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRACVTK128F4288966</td>\n",
+       "      <td>0.736058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2675</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRADCIM128F427A3A1</td>\n",
+       "      <td>0.736058</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     user            track_id     score\n",
+       "2690  ali  TRAQVDI128F42969C8  0.804297\n",
+       "2689  ali  TRAPLET128F145B049  0.770580\n",
+       "2688  ali  TRAXXVN128E0791AE4  0.744361\n",
+       "2679  ali  TRALVCW128F4288926  0.736058\n",
+       "2670  ali  TRAAAAW128F429D538  0.736058\n",
+       "2671  ali  TRAAABD128F429CF47  0.736058\n",
+       "2672  ali  TRAAZBD128F427A97D  0.736058\n",
+       "2673  ali  TRACHHH128E0788A35  0.736058\n",
+       "2674  ali  TRACVTK128F4288966  0.736058\n",
+       "2675  ali  TRADCIM128F427A3A1  0.736058"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_merge_all.sort_values(by='score', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>label_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5995</th>\n",
+       "      <td>TRAQVDI128F42969C8</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5996</th>\n",
+       "      <td>TRAQVDI128F42969C8</td>\n",
+       "      <td>60s Rock</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5997</th>\n",
+       "      <td>TRAQVDI128F42969C8</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5998</th>\n",
+       "      <td>TRAQVDI128F42969C8</td>\n",
+       "      <td>slow</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                track_id     label  label_count\n",
+       "5995  TRAQVDI128F42969C8      Rock            1\n",
+       "5996  TRAQVDI128F42969C8  60s Rock            1\n",
+       "5997  TRAQVDI128F42969C8   neutral            1\n",
+       "5998  TRAQVDI128F42969C8      slow            1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_df[labels_df['track_id']=='TRAQVDI128F42969C8']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>label_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>Western Hip-Hop/Rap</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>slow</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             track_id                label  label_count\n",
+       "0  TRAAAAW128F429D538                Urban            1\n",
+       "1  TRAAAAW128F429D538  Western Hip-Hop/Rap            1\n",
+       "2  TRAAAAW128F429D538                anger            1\n",
+       "3  TRAAAAW128F429D538              neutral            1\n",
+       "4  TRAAAAW128F429D538                 slow            1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_df[labels_df['track_id']=='TRAAAAW128F429D538']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Recommending (based on user profile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1402,16 +1864,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ali</td>\n",
-       "      <td>TRAAAAW128F429D538</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ali</td>\n",
        "      <td>TRAAABD128F429CF47</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ali</td>\n",
+       "      <td>TRAAAAW128F429D538</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1419,11 +1881,11 @@
       ],
       "text/plain": [
        "  username            track_id  rating\n",
-       "0      ali  TRAAAAW128F429D538     4.0\n",
-       "1      ali  TRAAABD128F429CF47     4.5"
+       "1      ali  TRAAABD128F429CF47       1\n",
+       "2      ali  TRAAAAW128F429D538       1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,13 +1893,6 @@
    "source": [
     "rating_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
