--- a/DeepContent.ipynb
+++ b/DeepContent.ipynb
@@ -197,6 +197,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
